test_src/compiler_errors/types/binary/AndBoolError1.b
class AndBoolError1 {
    void test() {
        println(true & 1);
    }
}
